Updates
- Add error types for when servers are down.
- Add more accurate data models for some D2 Service calls.
